[gd_scene load_steps=7 format=3 uid="uid://dmttbdu4lhkg4"]

[ext_resource type="Script" path="res://src/objects/accelerator/accelerator.gd" id="1_6gmy7"]
[ext_resource type="Texture2D" uid="uid://cse2bdt2qy7ry" path="res://assets/speed.png" id="1_hjn4w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4b8op"]
size = Vector2(160, 80)

[sub_resource type="Animation" id="Animation_62ltn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chevron1:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chevron2:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Chevron3:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Chevron4:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3x0ik"]
resource_name = "running"
length = 0.6
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Chevron1:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Chevron2:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Chevron3:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.24, 0.36, 0.48),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Chevron4:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.36, 0.48, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hwwkk"]
_data = {
"RESET": SubResource("Animation_62ltn"),
"running": SubResource("Animation_3x0ik")
}

[node name="Accelerator" type="Area2D"]
collision_layer = 0
collision_mask = 2
gravity_space_override = 3
gravity_point_center = Vector2(3, 0)
gravity_direction = Vector2(3, 0)
linear_damp_space_override = 3
linear_damp = 0.0
script = ExtResource("1_6gmy7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4b8op")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hwwkk")
}

[node name="StopAnimationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Chevron1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-45, 0)
texture = ExtResource("1_hjn4w")

[node name="Chevron2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-15, 0)
texture = ExtResource("1_hjn4w")

[node name="Chevron3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(15, 0)
texture = ExtResource("1_hjn4w")

[node name="Chevron4" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(45, 0)
texture = ExtResource("1_hjn4w")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="StopAnimationTimer" to="." method="_on_stop_animation_timer_timeout"]
